[package]
name = "spoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = "1.0.37"
nvim-oxi = {git = "https://github.com/noib3/nvim-oxi.git",features = ["neovim-nightly"]}
reqwest = "0.11.12"
